<resources>
    <string name="app_name">TaskApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkbox">checkBox</string>
    <string name="placeholdername">SampleText</string>
    <string name="duetime">Время</string>
    <string name="createNewTaskTitle">Новая задача</string>
    <string name="new_task">Новая задача</string>
    <string name="delete">Удалить</string>
    <string name="select_time">Выбрать время</string>
    <string name="save">Сохранить</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="editTask">Редактировать задачу</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="add_task_button">Добавить задачу</string>
    <string name="task_description_placeholder">BottomText</string>
    <string name="favourite">favouriteButton</string>
    <string name="task_label">Задачи</string>
</resources>