<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/taskItemContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="10dp"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <ImageButton
                android:id="@+id/completeButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/uncheck_24"
                android:contentDescription="@string/checkbox"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginEnd="16dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/completeButton"
                android:layout_toLeftOf="@+id/favouriteButton"
                android:text="@string/placeholdername"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_centerVertical="true"/>

            <ImageButton
                android:id="@+id/favouriteButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/star_empty_24"
                android:contentDescription="@string/favourite"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginStart="16dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/task_description_placeholder"
            style="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/dueTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duetime"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_gravity="end"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
